<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音乐计算器</string>
    <string name="hello_world">Hello world!</string>
    <string name="button0">C</string>
    <string name="text">计算器</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="nc">÷</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="ncc">×</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="nj">-</string>
    <string name="ndd">.</string>
    <string name="n0">0</string>
    <string name="nd">=</string>
    <string name="njj">+</string>
    <string name="t1">●</string>
    <string name="t2">^</string>
    <string name="t3">←</string>
    <string name="add">关于</string>
    <string name="help">帮助</string>
</resources>
