<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android" 
	    xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/linear"
	    android:orientation="vertical" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:background="#000000"
	    tools:context=".SplashActivity">
	<LinearLayout
	    android:id="@+id/linear1"
	    android:orientation="vertical" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:background="#000000"
		android:layout_weight="3">
		<TextView
			    android:id="@+id/test"
			    android:layout_width="fill_parent" 
			    android:layout_height="match_parent" 
			    android:background="#111111" 
			    android:layout_margin="1.5sp"
			    android:textColor="#ffffff"
			    android:gravity="right"
			    android:textSize="35sp"
			    android:textStyle="bold"
			    android:textScaleX="1"/>
	</LinearLayout >           <!--                              半屏 -->
	<LinearLayout
	    android:id="@+id/linear2"
	    android:orientation="vertical" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:background="#000000"
	    android:layout_weight="2">
	    <LinearLayout
		    android:id="@+id/linear0"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
			<Button 
			    android:id="@+id/button1" 
			    android:text="@string/t1"
			    style="@style/Other"/>
			<Button
			    android:id="@+id/button2"
			    android:text="@string/t2"
			    style="@style/Other"/>
			<Button  
			    android:id="@+id/button3" 
			    android:text="@string/t3"
			    style="@style/Other"/>
			<Button
			    android:id="@+id/button4"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent" 
			    android:background="#373d43" 
			    android:soundEffectsEnabled="false"
			    android:textColor="#ffffff"
			    android:layout_margin="1.5sp"
			    android:textSize="35sp"
			    android:textStyle="bold"
			    android:layout_weight="2"
			    android:text="@string/button0" 
			    />
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/linear21"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
			<Button 
			    android:id="@+id/button5" 
			    android:text="@string/n7"
			    style="@style/number"/>
			<Button
			    android:id="@+id/button6"  
			    android:text="@string/n8"
			    style="@style/number"/>
			<Button  
			    android:id="@+id/button7" 
			    android:text="@string/n9"
			    style="@style/number"/>
			<Button
			    android:id="@+id/button8"  
			    android:text="@string/nc"
			    style="@style/Other"/>
		</LinearLayout>
		<LinearLayout 
		    android:id="@+id/linear22"
		    android:orientation="horizontal" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
			<Button  
			    android:id="@+id/button9"  
			    android:text="@string/n4"
			    
			    style="@style/number"/>
			<Button
			    android:id="@+id/button10"  
			    android:text="@string/n5"
			    
			    style="@style/number"/>
			<Button 
			    android:id="@+id/button11"   
			    android:text="@string/n6"
			    style="@style/number"/>
			<Button 
			    android:id="@+id/button12"  
			    android:text="@string/ncc"
			    style="@style/Other"/>
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/linear3"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
			<Button 
			    android:id="@+id/button13"   
			    android:text="@string/n1"
			    style="@style/number"/>
			<Button
			    android:id="@+id/button14"   
			    android:text="@string/n2"
			    style="@style/number"/>
			<Button 
			    android:id="@+id/button15"   
			    android:text="@string/n3"
			    style="@style/number"/>
			<Button 
			    android:id="@+id/button16"  
			    android:text="@string/nj"
			    style="@style/Other"/>
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/linear4"
		    android:orientation="horizontal" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
			<Button 
			    android:id="@+id/button17"  
			    android:text="@string/ndd"
			    style="@style/Other"/>
			<Button 
			    android:id="@+id/button18"   
			    android:text="@string/n0"
			    style="@style/number"/>
			<Button 
			    android:id="@+id/button19"  
			    android:text="@string/nd"
			    style="@style/Other"/>
			<Button 
			    android:id="@+id/button20"  
			    android:text="@string/njj"
			    style="@style/Other"/>
		</LinearLayout >
	</LinearLayout>
</LinearLayout>